--- a/_posts/2025-04-07-2025-04.md
+++ b/_posts/2025-04-07-2025-04.md
@@ -6,6 +6,8 @@ category: 2025-04
 layout: post
 ---
 
-## [基于MCP协议中SSE请求的一些思考](https://linux.do/t/topic/538047)
+The first regular tech blog in April
+
+## 基于MCP协议中SSE请求的一些思考
 
 {% include article/2025-04/Thought.md %}
