refactor: blog article style

--- a/_posts/2024-07-19-2024-07.md
+++ b/_posts/2024-07-19-2024-07.md
@@ -1,8 +1,8 @@
 ---
-title: 2024-07
+title: 2024
 author: Yiming Wang
 date: 2024-07-19
-category: 2024-07
+category: 2024
 layout: post
 ---
 
@@ -10,4 +10,4 @@ This sentence wrote in July 2024.
 
 ## Test
 
-{% include article/2024-07/Test.md %}
+{% include article/2024/Test.md %}
