--- a/_posts/2025-03-30-2025-03.md
+++ b/_posts/2025-03-30-2025-03.md
@@ -1,13 +1,25 @@
 ---
-title: 2025-03
+title: 2025
 author: Yiming Wang
 date: 2025-03-30
-category: 2025-03
+category: 2025
 layout: post
 ---
 
 Begin to share my tech blog here
 
-## Initial Blog
+## 2025-03-30
 
-{% include article/2025-03/Begin.md %}
+{% include article/2025/2025-03/Begin.md %}
+
+## 2025-04-07
+
+{% include article/2025/2025-04/Thoughts.md %}
+
+## 2025-05-20
+
+{% include article/2025/2025-05/Thoughts.md %}
+
+## 2025-06-06
+
+{% include article/2025/2025-06/Thoughts.md %}
