feat: add July 2025 thought article and expand AI/infra notes
Added a new article for July 2025 covering lightweight Kubernetes setup and SaaS concepts. Expanded the June 2025 thought article with detailed notes on AI model training, hyperparameters, dataset management, and major model frameworks. Updated the May 2025 article with information about the React 19 compiler. Updated the main post to include the new July article.

--- a/_posts/2025-03-30-post.md
+++ b/_posts/2025-03-30-post.md
@@ -23,3 +23,7 @@ Begin to share my tech blog here
 ## 2025-06-06
 
 {% include article/2025/2025-06/Thought.md %}
+
+## 2025-07-03
+
+{% include article/2025/2025-07/Thought.md %}
