--- a/_posts/2025-03-30-post.md
+++ b/_posts/2025-03-30-post.md
@@ -27,3 +27,11 @@ Begin to share my tech blog here
 ## 2025-07-03
 
 {% include article/2025/2025-07/Thought.md %}
+
+## 2025-07-13
+
+{% include article/2025/2025-07/Thought2.md %}
+
+## 2025-07-20
+
+{% include article/2025/2025-07/Thought3.md %}
