feat: add article on AI-era protocols and update post
Added a new article discussing MCP, A2A, and ACP protocols in the AI era, including a mermaid diagram for human-agent interaction layers. Updated the 2025-03-30 post to include the new article for 2025-11-02.

--- a/_posts/2025-03-30-post.md
+++ b/_posts/2025-03-30-post.md
@@ -35,3 +35,7 @@ Begin to share my tech blog here
 ## 2025-07-20
 
 {% include article/2025/2025-07/Thought3.md %}
+
+## 2025-11-02
+
+{% include article/2025/2025-11/Thought.md %}
